<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    android:background="@color/white_yellow">
    <TextView
        android:id="@+id/tvPopupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catatan"
        android:fontFamily="@font/quicksand_bold"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:src="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvPopupContent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/pop_up_text1"
        android:fontFamily="@font/quicksand_bold"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPopupTitle"/>

    <TextView
        android:id="@+id/tvPopupContent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/pop_up_text2"
        android:fontFamily="@font/quicksand_bold"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPopupContent1"/>

    <TextView
        android:id="@+id/tvPopupContent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/pop_up_text3"
        android:fontFamily="@font/quicksand_bold"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPopupContent2"/>



</androidx.constraintlayout.widget.ConstraintLayout>