<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img_makanan">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitle"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white_yellow"
        android:paddingLeft="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvJapantTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makanan_japan"
            android:fontFamily="@font/quicksand_bold"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvIndoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makanan"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvJapantTitle"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivHelp"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:src="@drawable/ic_help"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListMakanan"
        android:layout_width="@dimen/_360sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clTitle"
        app:layout_constraintBottom_toTopOf="@id/clFooter"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:orientation="horizontal"
        tools:listitem="@layout/item_list"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFooter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:padding="@dimen/_10sdp"
        android:background="@color/white_brown"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.king.view.supertextview.SuperTextView
            android:id="@+id/tvJapanVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nasi_japan"
            android:fontFamily="@font/quicksand_bold"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ivSoundJapan"
            android:visibility="gone"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@mipmap/ic_sound"
            app:layout_constraintStart_toEndOf="@id/tvJapanVersion"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dash"/>

        <View
            android:id="@+id/dash"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="4dp"
            android:background="@drawable/view_dash"
            app:layout_constraintTop_toBottomOf="@id/tvJapanVersion"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.king.view.supertextview.SuperTextView
            android:id="@+id/tvIndoVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nasi"
            android:padding="@dimen/_5sdp"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/dash"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ivSoundIndo"
            android:visibility="gone"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:src="@mipmap/ic_sound"
            app:layout_constraintStart_toEndOf="@id/tvIndoVersion"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/dash"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnKembali"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_26sdp"
            android:background="@drawable/btn_arrow"
            app:backgroundTint="@color/yellow_option"
            android:textColor="@color/green"
            android:text="@string/kembali"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMenu"
            android:layout_marginEnd="8dp"
            android:paddingEnd="@dimen/_4sdp"
            android:paddingStart="@dimen/_10sdp"
            android:gravity="center" />

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_26sdp"
            android:background="@drawable/btn_menu"
            app:backgroundTint="@color/yellow_option"
            android:textColor="@color/green"
            android:text="@string/menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSelanjutnya"
            android:layout_marginEnd="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnSelanjutnya"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_26sdp"
            android:background="@drawable/btn_arrow_right"
            app:backgroundTint="@color/yellow_option"
            android:textColor="@color/green"
            android:text="@string/selanjutnya"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>