<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splashscreen">


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20ssp"
        android:text="@string/point_100"
        android:fontFamily="@font/quicksand_semi_bold"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_26sdp"
            android:background="@drawable/btn_arrow"
            app:backgroundTint="@color/yellow_option"
            android:textColor="@color/green"
            android:text="@string/coba_sekali_lagi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_100sdp"
            android:paddingEnd="@dimen/_4sdp"
            android:paddingStart="@dimen/_10sdp"
            android:gravity="center" />


        <Button
            android:id="@+id/btnKembali"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_26sdp"
            android:background="@drawable/btn_arrow_right"
            app:backgroundTint="@color/yellow_option"
            android:textColor="@color/green"
            android:text="@string/selanjutnya"
            android:layout_marginEnd="@dimen/_100sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
