<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clRoot"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_pola_kalimat_kegiatan">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFooter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_82sdp"
        android:padding="@dimen/_10sdp"
        android:background="@color/white_brown"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.king.view.supertextview.SuperTextView
            android:id="@+id/tvJapanVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/talk_japan_1"
            android:fontFamily="@font/quicksand_bold"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/dash"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="4dp"
            android:background="@drawable/view_dash"
            app:layout_constraintTop_toBottomOf="@id/tvJapanVersion"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.king.view.supertextview.SuperTextView
            android:id="@+id/tvIndoVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/quicksand_regular"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/dash"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnKembali"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_26sdp"
            android:background="@drawable/btn_arrow"
            app:backgroundTint="@color/yellow_option"
            android:textColor="@color/green"
            android:text="@string/kembali"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMenu"
            android:layout_marginEnd="8dp"
            android:paddingEnd="@dimen/_4sdp"
            android:paddingStart="@dimen/_10sdp"
            android:gravity="center" />

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_26sdp"
            android:background="@drawable/btn_menu"
            app:backgroundTint="@color/yellow_option"
            android:textColor="@color/green"
            android:text="@string/menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSelanjutnya"
            android:layout_marginEnd="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnSelanjutnya"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_26sdp"
            android:background="@drawable/btn_arrow_right"
            app:backgroundTint="@color/yellow_option"
            android:textColor="@color/green"
            android:text="@string/selanjutnya"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>