<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green_bg">

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="@color/brown_menu"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"/>

    <TextView
        android:id="@+id/tvLabelJapan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/test_japan"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/middle_black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvLabelIndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/middle_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelJapan"/>

    <TextView
        android:id="@+id/tvLabelAturan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aturan_test_japan"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelIndo"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:id="@+id/rvListJawaban"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelAturan"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/item_list_jawaban" />

    <ImageView
        android:id="@+id/ivTest"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/img_facewash"
        android:background="@drawable/bg_white_rounded"
        android:padding="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintEnd_toStartOf="@id/rvListJawaban"
        app:layout_constraintTop_toBottomOf="@id/tvLabelAturan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>